	  message. (DLR, found by Bill Marcum)
	- If we can't save the backup file for some reason, at least
	  save the original file, if possible, since that's better than
	  saving nothing. (DLR, problem found by Bill Marcum, solution
	  suggested by Jordi)
	- Clarify the error message when writing a temporary file for
	  prepending fails. (DLR)
- rcfile.c:
  parse_argument()
	- Rename variable ptr_bak to ptr_save, for consistency. (DLR)
- doc/nano.1, doc/nanorc.5, doc/rnano.1, doc/nano.texi:
	- Update the copyright years to include 2006. (DLR)
	- Explicitly mention that all regexes should be extended regular
	  expressions. (DLR, suggested by John M. Gabriele)
	- Miscellaneous minor fixes. (DLR)
- doc/nanorc.sample:
	- Tweak the "c-file" regex for characters to accept '"' again,
	  as it's apparently valid, and simplify it. (DLR)
	- Simplify the "shellscript" regex for command line options.
	  (DLR)
	- Replace instances of \" with ", since quotes inside string
	  parameters don't need to be escaped with backslashes. (DLR)
	- Mention in the comments that more than one start/end regex can
	  be included per line.  Also, change the comment for the
	  "whitespace" option so that the hexadecimal character values
	  are six digits long, and state which character values work
	  with which encodings. (DLR)
	- Add sample regexes for Python. (singular on the Gentoo forums,
	  http://forums.gentoo.org/viewtopic.php?t=86562; minor tweaks
	  by DLR, suggested by John M. Gabriele)
	- Explicitly mention that all regexes should be extended regular
	  expressions. (DLR, suggested by John M. Gabriele)
- UPGRADE:
	- Miscellaneous minor fixes. (DLR)

GNU nano 1.3.11 - 2006.03.30
- General:
	- Miscellaneous comment fixes. (DLR)
	- Remove unnecessary #ifdef around termios.h #include in nano.c.
	  (DLR)
	- Sort the default strings for brackets and punct, and the "or"
	  atom in the default regex string for quotestr, according to
	  ASCII.  Changes to main(), nano.1, nanorc.5, and