@@ -26,6 +26,8 @@ CVS code -
 	  suggested by Jordi)
 	- Clarify the error message when writing a temporary file for
 	  prepending fails. (DLR)
+	- Simplify the routine for closing the file just before we
+	  indicate success on the statusbar. (DLR)
 - rcfile.c:
   parse_argument()
 	- Rename variable ptr_bak to ptr_save, for consistency. (DLR)
